Closed
Bug 1656419
Opened 5 years ago
Closed 5 years ago
Assertion failure: animation.get() == aAnimation, at gfx/layers/Layers.cpp:195
Categories
(Core :: Layout, defect, P3)
Core
Layout
Tracking
()
RESOLVED
FIXED
81 Branch
Tracking | Status | |
---|---|---|
firefox81 | --- | fixed |
People
(Reporter: hiro, Assigned: hiro)
References
Details
Attachments
(2 files)
Attaching file is a case causing the assertion. We should check whether the given animation and the animation stored in mPartialPrerenderedAnimations are in the same EffectSet (i.e. both animations's target are the same one) instead of just comparing the animation instance.
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Updated•5 years ago
|
Severity: -- → S3
Priority: -- → P3
Pushed by hikezoe.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/97978347256f
Check whether the given animation and the animation stored in mPartialPrerenderedAnimations are in the same EffectSet instead of just comparing the animation instances. r=boris
![]() |
||
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•